ci-based-analysis-added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,10 @@ spring.datasource.password=7907
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
-#spring.datasource.url=jdbc:oracle:thin:@10.50.50.239:1521:dgbmkb?useUnicode=true&amp;characterEncoding=utf8
-#
-##test
-#spring.datasource.username=DIGITAL_B
-#spring.datasource.password=DIGITAL_B
-#spring.jpa.open-in-view=false
-#spring.datasource.driver-class-oracle.jdbc.driver.OracleDriver
+
+
+sonar.projectKey=MirkamolEgamberdiyev_RetrofitSpringboot
+sonar.organization=mirkamolegamberdiyev
+sonar.projectName=RetrofitSpringbott
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
