--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=RetrofitSpringbott
 server.port=8082
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-
-
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=7907
 spring.jpa.hibernate.ddl-auto=update
